--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.9",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^9.2.0",
     "react-native-dotenv": "^3.4.11",
