--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-document-picker": "^9.2.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.2",
@@ -62,6 +63,7 @@
     "react-native-onboard": "^2.6.0",
     "react-native-pager-view": "^6.3.1",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-picker-select": "^9.1.3",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-range-slider": "^0.1.2",
