--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.8.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
@@ -74,6 +75,7 @@
     "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.12.3",
     "react-navigation": "^5.0.0",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
