--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-crop-picker": "^0.41.1",
