--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
