--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.9",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-camera": "^4.2.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^9.2.0",
     "react-native-dotenv": "^3.4.11",
@@ -75,7 +76,7 @@
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.12.3",
     "react-navigation": "^5.0.0",
     "socket.io-client": "^4.7.5",
