Feat: add statistic screen

--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "picker": "^0.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^19.0.0",
     "react-native": "0.73.9",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-camera": "^4.2.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^9.2.0",
     "react-native-dotenv": "^3.4.11",
