--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.6.3",
     "react-native-webview": "^13.12.3",
     "react-navigation": "^5.0.0",
     "socket.io-client": "^4.8.1",
